[workspace]
members = ["macros"]

[workspace.lints.clippy]
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

[workspace.lints.rust]
missing_docs = "warn"

[package]
name = "evergreen_utility_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
evergreen_utility_ai_macros = { path = "macros" }
bevy_ecs = { version = "0.15", default-features = false, features = ["bevy_reflect"] }
bevy_hierarchy = { version = "0.15.2", default-features = false }
bevy_math = { version = "0.15.2", default-features = false }
bevy_tasks = { version = "0.15.2", default-features = false }
bevy_utils = { version = "0.15.2", default-features = false }
parking_lot = { version = "0.12.3", default-features = false }
petgraph = { version = "0.7.1", default-features = false, features = ["graphmap"] }
smallvec = { version = "1.13.2", default-features = false }
thiserror = { version = "2.0", default-features = false }
tracing = { version = "0.1.41", default-features = false }
variadics_please = { version = "1.1.0", default-features = false }

[dev-dependencies]
bevy = "0.15.2"
criterion = "0.5.1"

[[bench]]
name = "score"
harness = false

[lints]
workspace = true