[workspace]
members = ["macros"]

[workspace.lints.clippy]
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

[workspace.lints.rust]
missing_docs = "warn"

[package]
name = "evergreen_utility_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
evergreen_utility_ai_macros = { path = "macros" }
bevy_ecs = { git = "https://github.com/ItsDoot/bevy.git", rev = "0b16ac9", default-features = false }
bevy_math = {  git = "https://github.com/ItsDoot/bevy.git", rev = "0b16ac9", default-features = false }
bevy_platform_support = {  git = "https://github.com/ItsDoot/bevy.git", rev = "0b16ac9", default-features = false }
bevy_tasks = {  git = "https://github.com/ItsDoot/bevy.git", rev = "0b16ac9", default-features = false }
bevy_utils = {  git = "https://github.com/ItsDoot/bevy.git", rev = "0b16ac9", default-features = false }
parking_lot = { version = "0.12.3", default-features = false }
petgraph = { version = "0.7.1", default-features = false, features = ["graphmap"] }
smallvec = { version = "1.13.2", default-features = false }
thiserror = { version = "2.0", default-features = false }
tracing = { version = "0.1.41", default-features = false }
variadics_please = { version = "1.1.0", default-features = false }

[dev-dependencies]
bevy = {  git = "https://github.com/ItsDoot/bevy.git", rev = "0b16ac9" }
criterion = "0.5.1"

[[bench]]
name = "score"
harness = false

[lints]
workspace = true